@@ -266,8 +266,9 @@ Type: text
 _Description: Base system installed successfully.
 
 Template: base-installer/debootstrap/fallback-warning
-Type: text
-_Description: ${SECTION}: ${INFO}...
+Type: error
+_Description: Debootstrap warning
+ Warning: ${INFO}
 
 Template: base-installer/debootstrap/warning/retrying
 Type: text
